KSENROLL-14024 KSENROLL-14026 KSENROLL-14027 - Fixed spacing issue with minified html spacing. Removed Add to Cart success message.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@73583 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/courseCalendar.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/courseCalendar.less
@@ -96,10 +96,10 @@
 
     &-bg {
         height: 100%;
-        margin-left: 1px;
+        border-left: 1px solid @whiteBackground;
 
         &:first-child {
-            margin-left: 0;
+            border-left: none;
         }
     }
 }
@@ -341,10 +341,10 @@
             flex-flow: column nowrap;
         }
         &-content-bg {
-            margin-left: 0;
-            margin-top: 1px;
+            border-left: none;
+            border-top: 1px solid @whiteBackground;
             &:first-child {
-                margin-top: 1px;
+                border-top: none;
             }
         }
     }
